# sayit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dcodesayit_zcode_main_js_copy.txt  FLOAT_REBUILD_PLAN.md  FLOAT_VERSION_CHECKPOINT.md  README.md  SAYIT_REBUILD_PLAN.md  Sayit项目全景说明_整合文档.md  TYPELESS_BLUEPRINT.md  TYPELESS_REVERSE_ENGINEERING_PLAN.md  TYPELESS_REVERSE_ENGINEERING_REPORT.md  _check_pids.bat  _check_python.py  _check_state.py  _clean_all.py  _clean_restart.ps1  _dll_result.txt  _kill_all.bat  _kill_all.py  _restart_clean.py  _run_test.bat  _start_clean.bat  _test_dll_verify.py  _test_server.py  config.example.json  install_bridge_shortcut.bat  launch_sayit.bat  requirements.txt  server.py  start.bat  start_bridge.bat  剩余15%解决方案.md  未破解清单与破解方案.md  逆向白名单方法.md  颗粒度逆向手册.md
.ai/: BRIDGE_DESIGN.md  BRIDGE_RUN_REPORT.md  BRIDGE_SMOKE_TEST.md  CC_SELF_REVIEW.md  CLAUDE_LONG_TASK.md  CURRENT_TASK.md  CURRENT_TASK_OVERRIDE.md  DB_SAFETY_ASSESSMENT_2026-06-29.md  DICTIONARY_RECOVERY_FEASIBILITY.md  DISTRIBUTION_ACCOUNT_UPDATE_ROADMAP.md  FINAL_CLOSEOUT_CHATGPT_REVIEW.md  FINAL_CLOSEOUT_REPORT.md  INTEGRATION_REPORT.md  NEXT_DEVELOPMENT_ROADMAP.md  PRACTICAL_ASR_REPEAT_CHATGPT_APPROVAL.md  PRACTICAL_ASR_REPEAT_CHATGPT_REVIEW.md  PRACTICAL_ASR_REPEAT_FIX_REPORT.md  PRACTICAL_ASR_REPEAT_INCIDENT_2026-06-30.md  PRACTICAL_ASR_REPEAT_LOG_DIAGNOSIS.md  PRODUCT_REQUIREMENTS_BASELINE.md  (+45 more)
docs/: 复盘报告.md  (+3 more)
native/context_helper/: CMakeLists.txt  README.md  bootstrap_toolchain.ps1  build.ps1  probe.ps1
native/context_helper/src/: keyboard_helper.cpp  main.cpp
(+159 files in other folders)
